# Task-Solution-API

./: .editorconfig  .flake8  README.md  alembic.ini  migrate_and_run.sh  pyproject.toml
src/: __main__.py  app.py  settings.py
src/authors/: di.py  errors.py  interfaces.py  models.py  router.py  schemas.py
src/authors/services/: author_repository.py
src/authors/use_cases/: __init__.py  create_auther.py  get_auther_by_id.py
src/books/: errors.py  interfaces.py  models.py  router.py  schemas.py
src/books/services/: book_repository.py
src/books/use_cases/: __init__.py  create_book.py  get_book_by_id.py  search_book_by_barcode.py
src/core/: auth.py  constants.py  di.py  errors.py  exceptions.py  middleware.py  routers.py  schemas.py  unit_of_work.py  use_cases.py  utils.py
src/core/db/: client.py
src/core/db/alembic/: env.py
src/core/db/alembic/versions/: 1708176378_ebbd2134d668_added_author_books_and_storing_.py
src/health/: router.py
src/health/use_cases/: __init__.py  check_liveness.py  check_readiness.py
src/storing_information/: errors.py  interfaces.py  models.py  router.py  schemas.py
src/storing_information/services/: storing_information.py
src/storing_information/use_cases/: __init__.py  add_bulk.py  add_leftover.py  remove_leftover.py
